--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>¿Quién sos ahora?</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="assets/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
