Organiza elementos y agrega boton para cambiar camara

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+
+      <div class="rightButtonBar">
+        <button id="aboutButton"><i class="bi bi-question"></i></button>
+        <button id="changeCameraButton"><i class="bi bi-arrow-counterclockwise arrow-icon"></i><i class="bi bi-camera camera-icon"></i></button>
+      </div>
+
+      <div class="canvasContainer"></div>
+      <div class="textContainer" id="poem"></div>
+
+      <div class="bottomButtonBar">
+        <button id="seePoemButton"><i class="bi bi-eye"></i></button>
+        <button id="addButton"><i class="bi bi-plus"></i></button>
+        <button id="shareButton"><i class="bi bi-share"></i></button>
+      </div>
+      <script src="sketch.js"></script>
   </body>
 </html>
