Inhabilita botones de la barra derecha cuando se muestra el modal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-      <div class="rightButtonBar">
+      <div class="rightButtonBar" id="rightButtonBar">
         <button id="aboutButton"><i class="bi bi-question"></i></button>
         <button id="changeCameraButton"><i class="bi bi-arrow-counterclockwise arrow-icon"></i><i class="bi bi-camera camera-icon"></i></button>
       </div>
