Mueve inputContainer al html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
       <div class="textContainer" id="poem"></div>
 
+      <div id="inputContainer" class="inputContainer">
+        <input id="textBox" type="text" maxlength="30" placeholder="¿Quién sos ahora?">
+        <button id="saveButton"><i class="bi bi-save"></i></button>
+      </div>  
+
       <div class="bottomButtonBar" id="bottomButtonBar">
         <button id="seePoemButton"><i class="bi bi-eye"></i></button>
         <button id="addButton"><i class="bi bi-plus"></i></button>
