Modifica mensaje de inicio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="modal-content">
             <div class="closeButton" id="modalCloseButton">&times;</div>
             <h1>¿Quién sos ahora?</h1>
-            <p>Es una web interactiva que distorsiona los cuerpos de lxs usuarixs mientras establecen un diálogo sobre su identidad con el sistema.</p>
+            <p>Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
+            <p>Para funcionar necesitamos que prendas tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
             <h2>Modo de uso</h2>
             <div id="howTo">
                 <div><i class="bi bi-eye"></i> Ver texto generado colectivamente</div>
