Agrega logo QSA

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="aboutModal" class="modal">
         <div class="modal-content">
             <div class="closeButton" id="modalCloseButton">&times;</div>
-            <h1>¿Quién sos ahora?</h1>
+            <img src="assets/images/logo.png" alt="¿Quién sos ahora?" class="modal-title-image">
             <p>Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
             <p>Para funcionar necesitamos que prendas tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
             <h2>Modo de uso</h2>
