--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
 
       <div id="aboutModal" class="modal">
         <div class="modal-content">
-            <div class="closeButton" id="modalCloseButton">&times;</div>
-            <img src="assets/images/logo.png" alt="¿Quién sos ahora?" class="modal-title-image">
-            <p>Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
-            <p>Para funcionar necesitamos que prendas tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
-            <h2>Modo de uso</h2>
-            <div id="howTo">
-                <div><i class="bi bi-eye"></i> Ver texto generado colectivamente</div>
-                <div><i class="bi bi-plus"></i> Agregar texto</div>
-                <div><i class="bi bi-share"></i> Compartir o descargar imagen</div>
+          <div class="closeButton" id="modalCloseButton">&times;</div>
+          <img src="assets/images/logo.png" alt="¿Quién sos ahora?" class="modal-title-image">
+          <p>Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
+          <p>Para funcionar necesitamos que prendas tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
+          <h3>Modo de uso</h3>
+          <div id="howTo">
+            <div><div class="howTo-icon"><i class="bi bi-eye"></i></div><div>Ver texto generado colectivamente</div></div>
+            <div><div class="howTo-icon"><i class="bi bi-plus"></i></div><div>Agregar texto</div></div>
+            <div><div class="howTo-icon"><i class="bi bi-share"></i></div><div>Compartir o descargar imagen</div></div>
+            <div>
+              <div class="howTo-icon"><i class="bi bi-arrow-counterclockwise arrow-icon"></i><i class="bi bi-camera camera-icon"></i></div>
+              <div>Cambiar cámara</div>
             </div>
-            <p class="modalFooter">v1.2 | 2024 | <a href="https://www.naysolange.xyz" target="_blank">naysolange.xyz</a></p>
+          </div>
+          <p class="modalFooter">v1.3 | 2024 | <a href="https://www.naysolange.xyz" target="_blank">naysolange.xyz</a></p>
         </div>
     </div>
       <script src="sketch.js"></script>
