Agrega efecto en la espera al servicio

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <p class="modalFooter">v1.3 | 2024 | <a href="https://www.naysolange.xyz" target="_blank">naysolange.xyz</a></p>
         </div>
     </div>
+      <script src="pixel.js"></script>
       <script src="sketch.js"></script>
   </body>
 </html>
