--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         </div>
     </div>
       <script src="pixel.js"></script>
+      <script src="events.js"></script>
+      <script src="calls.js"></script>
       <script src="sketch.js"></script>
   </body>
 </html>
