--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="closeButton" id="modalCloseButton">&times;</div>
           <img src="assets/images/logo.png" alt="¿Quién sos ahora?" class="modal-title-image">
           <p>Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
-          <p>Para funcionar necesitamos que prendas tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
+          <p>Habilitá tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
           <h3>Modo de uso</h3>
           <div id="howTo">
             <div><div class="howTo-icon"><i class="bi bi-eye"></i></div><div>Ver texto generado colectivamente</div></div>
