--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
       <div id="aboutModal" class="modal">
         <div class="modal-content">
           <div class="closeButton" id="modalCloseButton">&times;</div>
+          <button id="languageToggleButton" class="languageToggleButton">ES</button>
           <img src="assets/images/logo.png" alt="¿Quién sos ahora?" class="modal-title-image">
-          <p>Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
-          <p>Habilitá tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
-          <h3>Modo de uso</h3>
+          <p id="modalText1">Es una web interactiva que te distorsiona mientras establecés un diálogo sobre tu identidad con el sistema.</p>
+          <p id="modalText2">Habilitá tu cámara. No se almacena ninguna imagen tuya en ningún lado.</p>
+          <h3 id="usageTitle">Modo de uso</h3>
           <div id="howTo">
-            <div><div class="howTo-icon"><i class="bi bi-eye"></i></div><div>Ver texto generado colectivamente</div></div>
-            <div><div class="howTo-icon"><i class="bi bi-plus"></i></div><div>Agregar texto</div></div>
-            <div><div class="howTo-icon"><i class="bi bi-share"></i></div><div>Compartir o descargar imagen</div></div>
+            <div><div class="howTo-icon"><i class="bi bi-eye"></i></div><div id="howToText1">Ver texto generado colectivamente</div></div>
+            <div><div class="howTo-icon"><i class="bi bi-plus"></i></div><div id="howToText2">Agregar texto</div></div>
+            <div><div class="howTo-icon"><i class="bi bi-share"></i></div><div id="howToText3">Compartir o descargar imagen</div></div>
             <div>
               <div class="howTo-icon"><i class="bi bi-arrow-counterclockwise arrow-icon"></i><i class="bi bi-camera camera-icon"></i></div>
-              <div>Cambiar cámara</div>
+              <div id="howToText4">Cambiar cámara</div>
             </div>
           </div>
           <p class="modalFooter">v1.7 | 2024 | <a href="https://www.naysolange.xyz" target="_blank">naysolange.xyz</a></p>
